# semdl

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/agents/: semantics-code-reviewer.agent.md  todo-intake-auditor.agent.md
.github/prompts/: add-cli-golden-cases.prompt.md  audit-todo-intake.prompt.md  plan-semdl-spec-change.prompt.md  propose-adr.prompt.md  review-semdl-change.prompt.md
.github/workflows/: fixture-overview.yml
docs/: cli.ebnf  documentation-pairing-workflow.md  documentation-pairing-workflow.ssd  pitfall-prevention.md  requirements.llmthink.dsl  requirements.md  requirements.ssd  ssd.ebnf  ssq.ebnf  test-runner-contract.md  test-runner-format.md
docs/adr/: 0001-use-architecture-decision-records.md  0002-separate-library-cli-and-runner.md  0003-establish-initial-implementation-layout.md  0004-structure-cli-help-and-entrypoints.md  0005-add-opt-in-semdl-help-rendering.md  0006-prioritize-semdl-and-query-grammars-over-cli-argv-grammar.md  0007-introduce-primary-grammar-artifacts-for-ssd-and-ssq.md  0008-decide-embedding-persistence-and-similarity-resolution.md  0009-add-ollama-backed-embedding-generation-to-extract.md  0010-define-initial-search-subgraph-result-shape.md  0011-define-initial-normalize-stdout-slice.md  0012-add-runner-file-output-fixtures-for-write-cases.md  0013-enable-similarity-backed-search-subgraphs.md  0014-expand-extract-provider-and-raw-text-intake.md  0015-define-paired-transform-apply-and-runner-absent-file-assertions.md  0016-define-create-only-metadata-add.md  0024-add-unary-not-to-ssq-where.md  (+31 more)
(+561 files in other folders)
